added hover labels to all icons

--- a/wp-content/themes/bootstrapwp-87/js/templates.html
+++ b/wp-content/themes/bootstrapwp-87/js/templates.html
@@ -65,7 +65,8 @@
           server: $data,
           remove: $root.remove_container,
           icon: "container-icon",
-          has_licenses: false
+          has_licenses: false,
+          label:"containeryes"
         }
       } -->
   <!-- /ko -->
