--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html dir="ltr" lang="en-US" prefix="og: http://ogp.me/ns#">
   <head>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=8">
+  <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
   <meta name="google-site-verification" content="e4iTXfH_6To1pbxanxxFx6vOWGW7BMpJkSik3yEWCZ4" />
 
    <title>Elastichosts | Cloud Servers Instant Quote</title>
