--- a/wp-content/themes/bootstrapwp-87/js/templates.html
+++ b/wp-content/themes/bootstrapwp-87/js/templates.html
@@ -209,7 +209,7 @@
   <div class="clearfix"></div>
 </script>
 <script type="text/html" id="licenses-modal-template">
-  <div data-bind="attr: { id: unique_id }" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="display: none;">
+  <div data-bind="attr: { id: unique_id }" class="modal bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
