changed default values to ones Richard specified and added folder icon for containers

--- a/wp-content/themes/bootstrapwp-87/js/templates.html
+++ b/wp-content/themes/bootstrapwp-87/js/templates.html
@@ -131,7 +131,7 @@
   <div data-bind="template: {
     name: 'storage-template',
     data: {
-      icon: 'drive-ssd',
+      icon: 'drive-folder',
       can_switch: false,
       data: $data
     }
