Added explanation of folders on longer mouseover, changed Add Disk to Add Storage

--- a/wp-content/themes/bootstrapwp-87/js/templates.html
+++ b/wp-content/themes/bootstrapwp-87/js/templates.html
@@ -80,7 +80,7 @@
       <div class="column" style="width: 10%">
         <div class="server-icon" data-bind="css: icon"></div>
         <!-- ko with: server -->
-          <a class="my-event blue-hover hover-small" data-bind="event: {click: add_disk}">Add Disk</a>
+          <a class="my-event blue-hover hover-small" data-bind="event: {click: add_disk}">Add Storage</a>
         <!-- /ko -->
       </div>
       <div class="column" style="width: 85%">
