long hover now gives explanation, plus tidy up of some of my code

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ border:none;
         <div id="whichzone" style="position:relative;">
           <div id="pop1" class="popover right in" style="display:none;position: absolute; top: 0; left: 560px;width: 157px;">
             <div class="arrow" style="border-right: 5px solid #313785;"></div>
-            <div class="popover-content" style="background-color:#313785;color: #fff;border-radius: 3px;">
+            <div class="popover-content">
               Please pick a zone. We've tried to select your closest one, but another may be more cost efficient for bandwidth. You can read about our data centres <a href="/cloud-servers/data-centres/" style="color:#fbac29" alt="Our Data Centres">here</a></div>
           </div>
           <!-- ko foreach: country_flags -->
@@ -527,7 +527,7 @@ border:none;
             <div class="btn-toolbar" style="position: relative;" id="add-new-buttons" role="toolbar">
               <div id="pop2"  class="popover right in" style="display:none;position: absolute; top: 0; left: 560px;width: 150px;">
                 <div class="arrow" style="border-right: 5px solid #313785;"></div>
-                <div class="popover-content" style="background-color:#313785;color: #fff;border-radius: 3px;">
+                <div class="popover-content">
                   Click here to add cloud servers to your plan.</div>
               </div>
               <p class="cont-warning" data-bind="visible: coming_soon">Please be aware that Elastic Containers are not yet available in this zone.</p>
