Added number of instances to servers

--- a/index.html
+++ b/index.html
@@ -538,9 +538,11 @@ border:none;
               </div>
             </div>
           </div>
-          <!-- ko foreach: servers -->
-            <!-- ko template: template --><!-- /ko -->
-          <!-- /ko -->
+          <div id="server-list">
+            <!-- ko foreach: servers -->
+              <!-- ko template: template --><!-- /ko -->
+            <!-- /ko -->
+          </div>
         </div>
         <div class="clearfix"></div>
         <div class="panel-heading"></div>
