--- a/wp-content/themes/bootstrapwp-87/js/templates.html
+++ b/wp-content/themes/bootstrapwp-87/js/templates.html
@@ -74,8 +74,8 @@
 <script type="text/html" id="server-template">
   <div class="panel-body">
     <div class="btn-toolbar" role="toolbar">
-      <button type="button" class="close" data-bind="click: server.minus" aria-hidden="true">&minus;</button>
-      <button type="button" class="close" data-bind="click: server.plus" aria-hidden="true">&plus;</button>
+      <button type="button" class="minus close" data-bind="click: server.minus" aria-hidden="true">&minus;</button>
+      <button type="button" class="plus close" data-bind="click: server.plus" aria-hidden="true">&plus;</button>
     </div>
     <div style="clear: both;"></div>
   </div>
