Changed bandwidth display, added ajax call on free trial click and changed parser to work with calculator monitor

--- a/wp-content/themes/bootstrapwp-87/js/templates.html
+++ b/wp-content/themes/bootstrapwp-87/js/templates.html
@@ -42,7 +42,7 @@
       <select class="my-input-select-box" data-bind="options: range, value: value"></select>
     </label>
   </div>
-  <div class="column" style="float: right" data-bind="text: formatted_price"></div>
+  <div class="column my-text-number" style="float: right" data-bind="text: formatted_price"></div>
   <div class="clearfix"></div>
 </script>
 <script type="text/html" id="virtual-machine-template">
