--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
 
                     <div class="span10" id="calculator">
                         <div data-bind="template: 'base-calculator-template'"></div>
+                        <a class="continue_cta continue" data-bind="click: submit, css: {disabled: !has_resources()}"> <span class="symbol">✔</span>Buy now </a>
                     </div>
                     <!-------------->
-
 
                     <!-- /wordpress copy above -->
                 </div>
