--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
                     <div class="span10" id="calculator">
                         <div data-bind="template: 'base-calculator-template'"></div>
-                        <a class="continue_cta continue" data-bind="click: submit, css: {disabled: !has_resources()}"> <span class="symbol">✔</span>Buy now </a>
+                        <a class="freetrialbottom" data-bind="click: submit, css: {disabled: !has_resources()}"> Buy now </a>
                     </div>
                     <!-------------->
 
